partialy well positioned menu now only to fix problem with overlaping app bar

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,9 @@
   color: #A6A6A6;
 */
 
-.STdarkBlue {
+/* .STdarkBlue {
   color: '#39A9DC';
 }
 .STlightBlue {
   color: '#002052';
-}
+} */
