--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,9 @@ code {
 }
 
 
-.STdarkBlue {
+/* .STdarkBlue {
   color: #39A9DC;
 }
 .STlightBlue {
   color: #002052;
-}
+} */
